--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
 # Excluded to make the git repo smaller (those are present in SVN)
-binaries/system/ActorEditor.exe
-binaries/system/AtlasUI.dll
-binaries/system/Collada.dll
-binaries/system/pyrogenesis.exe
-binaries/system/pyrogenesis.pdb
+#binaries/system/ActorEditor.exe
+#binaries/system/AtlasUI.dll
+#binaries/system/Collada.dll
+#binaries/system/pyrogenesis.exe
+#binaries/system/pyrogenesis.pdb
 
 # Build files
 *.so
 *.so.*
 *.a
 *.dylib
-binaries/system/ActorEditor
+#binaries/system/ActorEditor
 binaries/system/ActorEditor_dbg
-binaries/system/pyrogenesis
+#binaries/system/pyrogenesis
 binaries/system/pyrogenesis_dbg
+binaries/system/pyrogenesis_dbg.pdb
 binaries/system/test
 binaries/system/test_dbg
 binaries/system/*
